--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
         "test": "node app.js"
     },
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.2",
+        "hbs": "^4.2.0"
+    }
 }
